<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">IMConnect</string>
    <string name="action_settings">Settings</string>
     <string name="Home">Home</string>
    <string name="TheBuzz">The Buzz</string>
     <string name="Profile">Profile</string>
    <string name="AboutIMC">About IMC</string>
    <string name="ExploreIMC">Explore IMC</string>
    <string name="aboutTitle">Stay in touch!</string>
    
    <string name="aboutEmail">Email</string>
    <string name="aboutFB">Facebook Icon</string>
    <string name="aboutTwitter">Twitter Icon</string>
    <string name="aboutLinkedIn">LinkedIn Icon</string>
    <string name="aboutPinterest">Pinterest Icon</string>
    
    <string name="AvatarUrl">Content Description</string>
    <string name="Previous">Back To IMC Home</string>
     <string name="GoToPost">Go To Post</string>
     
      <string name="Next">Next</string>
       <string name="Prev">Previous</string>
       <string name="like">Zilla Like</string>
       <string name="share">Share</string>
       <string name="bHeader">The Buzz</string>
       <string name="bLink">Click Here to Share Your Thoughts</string>
       
       <string name="feedbackname">Name</string>
        <string name="feedbackemail">Email</string>
         <string name="feedbackbody">Comment</string>
          <string name="feedbackbutton">Submit Comment</string>
           <string name="Cancelbutton">Cancel</string>
           
           <string name="ThankYouMsg">Thank You</string>
           <string name="LikeMsg">Thank you for liking the post! Would you like to share it with your friends?</string>
           <string name="btnCancel">Cancel</string>
           <string name="btnShare">Share</string>
           <string name="EIMCHeader">Explore IMC</string>
           

</resources>
