<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:scrollbars="vertical">
    <LinearLayout
        android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

 
<EditText
    android:id="@+id/EditTextName"
    android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
    android:hint="@string/feedbackname"
    android:inputType="textPersonName" >
</EditText>

<EditText
    android:id="@+id/EditTextEmail"
    android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
    android:hint="@string/feedbackemail"
    android:inputType="textEmailAddress">
</EditText>

<EditText
    android:id="@+id/EditTextFeedbackBody"
    android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
    android:hint="@string/feedbackbody"
    android:inputType="textMultiLine"
    android:lines="5">
</EditText>
<Button
    android:id="@+id/ButtonSendFeedback"
    android:layout_width="fill_parent"
        android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:textColor="#FF6600"
     	android:background="@drawable/white_rectangle"
     	android:textSize="20sp" 
        android:layout_marginTop="4dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
    android:text="@string/feedbackbutton"
    android:onClick="sendFeedback">
</Button>
 
    </LinearLayout>
</ScrollView>