<?xml version="1.0" encoding="UTF-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:scrollbars="vertical">
    <LinearLayout
        android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

 
<TextView
    android:id="@+id/Header"
    android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:gravity="center"
    android:text="@string/ThankYouMsg">
</TextView>

<TextView
    android:id="@+id/Msg"
    android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
    android:text="@string/LikeMsg">
</TextView>
 
<RelativeLayout>
    
<Button
    android:id="@+id/ButtonCancel"
    android:layout_width="fill_parent"
        android:layout_height="wrap_content"
         android:textColor="#FF6600"
     	android:background="@drawable/white_rectangle"
     	android:textSize="20sp" 
     	android:singleLine="true"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
    android:text="@string/btnCancel"
    android:onClick="cancel">
</Button>
<Button
    android:id="@+id/ButtonShare"
    android:layout_width="fill_parent"
        android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_toRightOf="@+id/ButtonCancel"
         android:textColor="#FF6600"
     	android:background="@drawable/white_rectangle"
     	android:textSize="20sp" 
        android:layout_marginTop="4dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
    android:text="@string/btnShare"
    android:onClick="share">
</Button>
 </RelativeLayout>
    </LinearLayout>
</ScrollView>