<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
<Button
    android:id="@+id/btnPrev"
     android:layout_height="wrap_content"
     android:layout_width="wrap_content"
     android:layout_gravity="left"
     android:text="@string/Previous"
     android:background="@drawable/rounded_rectangle"
     android:textSize="20sp" 
     android:textColor="#FF6600"
     android:onClick="GoBack" />
<!-- <View
    android:layout_width="fill_parent"
    android:layout_height="1dp"
    android:id="@+id/seperator"
    android:background="@android:color/darker_gray"/> -->


  <RelativeLayout 
    android:layout_width="fill_parent" android:layout_height="fill_parent" 
    android:gravity="fill">
    <TextView android:id="@+id/txtCmtCnt"
          android:layout_width="30dp"
         android:layout_height="wrap_content"
         android:singleLine="true" 
         android:textSize="20sp" 
         android:layout_marginRight="45dp" 
         android:layout_alignParentRight="true" />
     <ImageView android:id="@+id/btnCmt"
         android:src="@drawable/ic_action_chat"
        android:layout_width="50dp" 
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/txtCmtCnt"
        android:contentDescription="@string/like"
        android:singleLine="true" 
         android:layout_marginRight="60dp" 
        android:layout_alignParentRight="true"/> 
      
      
     <ImageView android:id="@+id/btnshare"
         android:src="@drawable/ic_action_share"
         android:layout_width="60dp"
         android:layout_height="wrap_content"
         android:contentDescription="@string/share"
         android:singleLine="true" 
          android:layout_marginRight="130dp" 
         android:layout_alignParentRight="true" /> 
        <TextView android:id="@+id/txtLikeCnt"
          android:layout_width="20dp"
         android:layout_height="wrap_content"
          android:layout_toLeftOf="@id/btnshare"
         android:singleLine="true" 
         android:textSize="24sp" 
         android:layout_marginRight="200dp" 
         android:layout_alignParentRight="true" />
     <ImageView android:id="@+id/btnLike"
         android:src="@drawable/ic_action_favorite"
        android:layout_width="60dp" 
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/txtLikeCnt"
        android:contentDescription="@string/like"
        android:singleLine="true" 
         android:layout_marginRight="200dp" 
        android:layout_alignParentRight="true"/> 
     <ImageView android:id="@+id/btnNext"
         android:src="@drawable/ic_action_next_item"
         android:contentDescription="@string/Next" 
         android:layout_width="60dp"
         android:layout_toLeftOf="@id/btnLike"
        android:layout_height="wrap_content"
         android:layout_marginRight="250dp" 
        android:singleLine="true" android:layout_alignParentRight="true"  />
    <ImageView android:id="@+id/btnPrevious"
         android:src="@drawable/ic_action_previous_item"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content"
        android:contentDescription="@string/Prev"
        android:layout_marginRight="300dp" 
        android:layout_toLeftOf="@id/btnNext"
        android:singleLine="true" 
        android:ellipsize="end" />  
       
        </RelativeLayout>
    
        <View
    android:layout_width="fill_parent"
    android:layout_height="1dp"
    android:id="@+id/seperator2"
    android:background="#FF6600"/>

<WebView
   android:layout_width="wrap_content"
    android:layout_height="0dp" 
    android:id="@+id/SinglePostView" 
    android:layout_weight="1">
</WebView>



</LinearLayout>


